--- a/index.html
+++ b/index.html
@@ -294,8 +294,21 @@
   </div>
 </section>
 
-
-
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Application In Practice</h2>
+        <div class="content has-text-justified">
+          <p>
+              In real-world application scenarios, our method has successfully enhanced the anomaly detection performance of the Asia-Pacific region’s largest observability platform, Alibaba Cloud Observability Service. This service provides anomaly detection, fault diagnosis, and other service for multiple platforms, including Alibaba Group and Ant Group. To address diverse anomaly detection requirements across different platforms, we employ multimodal transfer learning to learn anomaly patterns from the multimodal observability data of existing systems and subsequently transfer this knowledge to target platforms. This approach improves the accuracy of anomaly detection, reduces strong dependence on alert instrumentation, significantly decreases the additional expert costs associated with instrumentation design, and enhances the effectiveness and practicality of Alibaba Cloud Observability in improving platform service reliability. ALARM is designed to address real-world challenges in microservice anomaly detection, making it highly applicable in practical production environments. ALARM tackles the Cross-system Anomaly Detection using Multimodal data (CADM) task, which aims to build effective anomaly detection models for target systems where labeled runtime data is unavailable, by leveraging abundant labeled multimodal runtime data from other systems. This section discusses how ALARM can be deployed and utilized in actual microservice systems.
+          </p>
+            
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <footer class="footer">
   <div class="container">
@@ -308,8 +321,8 @@
       </p>
       <div style="margin-top: 1rem;">
         <a class="icon-link" href="https://anonymous.4open.science/r/ALARM-A779/" style="margin: 0 10px;">
-          <i class="fab fa-github"></i>
-        </a>
+        <i class="fab fa-github"></i>
+      </a>
       </div>
       <p style="margin-top: 1rem; font-size: 0.9em; color: #666;">
         This work is an anonymous submission. Website template adapted from academic project pages.
